# Proyecto-Distribuido-1

./: .gitignore  CMakeLists.txt  README.md  fileManager1  fileManagerClient  fileManagerServer  identidad.txt  multMatrixClient  multMatrixServer  random.txt  resultado.txt  resultado2.txt  resultado3.txt
aa_cliente/: multMatrixClient  resultado.txt
aa_servidor/: identidad.txt
cliente/: multMatrixClient  resultado2.txt
dirpruebaCliente/: heyS.txt
dirpruebaServidor/: webo.txt  weboS.txt
fileManager/: filemanager.cpp  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  mainPR2Client.cpp  mainPR2Server.cpp
multMatrix/: mainPR1Client.cpp  mainPR1Server.cpp  mainPR1_Client.cpp  manejoMatriz.cpp  manejoMatriz.h  multMatrix_imp.cpp  multmatrix.cpp  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h
